--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-   <fragment
+   <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
