--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-   <androidx.fragment.app.FragmentContainerView
+   <fragment
        android:id="@+id/main_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
@@ -16,7 +16,7 @@
        app:layout_constraintBottom_toTopOf="@id/btm_nav"
        app:navGraph="@navigation/nav_graph"
        android:name="androidx.navigation.fragment.NavHostFragment"
-   />
+    /> <!---navHostFragment(above) to host our nav_graph-->
 
    <com.google.android.material.bottomnavigation.BottomNavigationView
       android:id="@+id/btm_nav"
