--- a/app/src/main/res/layout/activity_meal.xml
+++ b/app/src/main/res/layout/activity_meal.xml
@@ -10,7 +10,8 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_230sdp"
-        android:backgroundTint="@color/g_black">
+        android:backgroundTint="@color/g_black"
+        >
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
              android:id="@+id/collapsing_toolbar"
@@ -18,7 +19,8 @@
             android:layout_height="match_parent"
             app:contentScrim="@color/white"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title="Meal Name">
+            app:title="Meal Name"
+            >
 
             <ImageView
                 android:id="@+id/img_random"
@@ -35,6 +37,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_favorite"
@@ -65,6 +68,7 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
+                android:id="@+id/category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -74,6 +78,7 @@
                 android:textColor="@color/g_black"
                 android:textStyle="bold" />
             <TextView
+                android:id="@+id/region"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Area:Kenya"
@@ -115,4 +120,12 @@
         android:src="@drawable/ic_youtube"
         android:layout_marginBottom="@dimen/_10sdp"
         android:layout_gravity="bottom|center"/>
+<com.google.android.material.progressindicator.LinearProgressIndicator
+   android:id="@+id/progress_bar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:indeterminate="true"
+    app:layout_anchor="@id/appbar"
+    app:layout_anchorGravity="bottom"
+    android:visibility="gone"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
