--- a/app/src/main/res/layout/activity_meal.xml
+++ b/app/src/main/res/layout/activity_meal.xml
@@ -10,8 +10,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_230sdp"
-        android:backgroundTint="@color/g_black"
-        >
+        android:backgroundTint="@color/g_black">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
              android:id="@+id/collapsing_toolbar"
@@ -19,8 +18,7 @@
             android:layout_height="match_parent"
             app:contentScrim="@color/white"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title="Meal Name"
-            >
+            app:title="Meal Name">
 
             <ImageView
                 android:id="@+id/img_random"
