--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,9 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -60,8 +60,8 @@
         android:id="@+id/random_meal_card"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_150sdp"
-        android:layout_marginStart="@dimen/_25sdp"
-        android:layout_marginEnd="@dimen/_25sdp"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_marginEnd="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
         app:cardUseCompatPadding="true"
         app:cardCornerRadius="@dimen/_10sdp"
@@ -96,8 +96,8 @@
         android:id="@+id/rec_view_meals_popular"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_90sdp"
-        android:layout_marginStart="@dimen/_25sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_marginEnd="@dimen/_5sdp"
         app:layout_constraintTop_toBottomOf="@id/most_popular"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -118,15 +118,17 @@ app:layout_constraintStart_toStartOf="@id/want_eat"/>
         android:id="@+id/category_card"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_150sdp"
-        android:layout_marginStart="@dimen/_25sdp"
-        android:layout_marginEnd="@dimen/_25sdp"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_marginEnd="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
         app:cardUseCompatPadding="true"
         app:cardCornerRadius="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/category_tv"
-        app:cardBackgroundColor="@color/accent"
+        app:cardBackgroundColor="@color/white"
+        android:scrollbars="none"
+
         >
 
     <androidx.recyclerview.widget.RecyclerView
@@ -134,6 +136,7 @@ app:layout_constraintStart_toStartOf="@id/want_eat"/>
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scrollbars="none"
+
        />
 
     </androidx.cardview.widget.CardView>
